--- a/1.html
+++ b/1.html
@@ -71,16 +71,16 @@
         </div>
 
 
-        <div class="item content-center" style="background-image: url('Web/page03.jpg'); background-size: contain; background-position: center; background-attachment: local; background-repeat: no-repeat; background-color: #000000;">
+        <div class="item content-center" style="background-image: url('Web/page034.jpg'); background-size: contain; background-position: center; background-attachment: local; background-repeat: no-repeat; background-color: #000000;">
             <div class="center-items">
 
-                <button class="center-items " type="button" onClick="PlayAndShow('audio1-0', 'text1-0', 'play1-0')" style="position: absolute; top: .8vw; left:25vw;">
+                <button class="center-items " type="button" onClick="PlayAndShow('audio1-0', 'text1-0', 'play1-0')" style="position: absolute; top: 21vw; left:90vw;">
                     <img id="play1-0" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
                 </button>
     
                 <div class="items hidden-text clickable" id="text1-0" onClick="this.style.display='none'">
-                    <h2>What are some of our best school memories? The 1st grade students at Isesaki’s First Junior High School wrote these for 6th graders in elementary school. After reading these, the 6th graders knew a little more about life in junior high school. 
-                    </h2>
+                    <h2>Famous Things around the World<br><br>
+                    What are some famous things from other countries? </h2>
                 </div>
     
                 <audio id="audio1-0">
@@ -88,7 +88,7 @@
                 </audio>
 
 
-                <button class="center-items " type="button" onClick="PlayAndShow('audio1-1', 'text1-1', 'play1-1')" style="position: absolute; top: 17.4%; left:17.5%;">
+                <button class="center-items " type="button" onClick="PlayAndShow('audio1-1', 'text1-1', 'play1-1')" style="position: absolute; top: 1vw; left:28vw;">
                     <img id="play1-1" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
                 </button>
 
