--- a/1.html
+++ b/1.html
@@ -93,7 +93,7 @@
                 </button>
 
                 <div class="items hidden-text clickable" id="text1-1" onClick="this.style.display='none'">
-                    <h3>My favorite event this year was our midterm and final exams. I did a lot of homework. We don't like homework, but we need to study every day... After the exams, I got my score. I was very worried, but I had a good score! After exams, I played a lot of video games. It was fun! Everyone, enjoy yourself now!
+                    <h3>France
                     </h3>
                 </div>
 
@@ -102,12 +102,12 @@
                 </audio>
 
 
-                <button class="center-items " type="button" onClick="PlayAndShow('audio1-2', 'text1-2', 'play1-2')" style="position: absolute; top: 9.8%;  left:36.3%;">
+                <button class="center-items " type="button" onClick="PlayAndShow('audio1-2', 'text1-2', 'play1-2')" style="position: absolute; top: 14.4vw; left:25vw;">
                     <img id="play1-2" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
                 </button>
 
                 <div class="items hidden-text clickable" id="text1-2" onClick="this.style.display='none'">
-                    <h3>My favorite event this year was our entrance ceremony. It was in April. At first, I was a little bit nervous, but the time passed and I felt better. I was very nervous during my self-introduction. But it was good for me. It was very exciting.
+                    <h3>Switzerland
                     </h3>
                 </div>
 
@@ -116,12 +116,12 @@
                 </audio>
 
 
-                <button class="center-items " type="button" onClick="PlayAndShow('audio1-3', 'text1-3', 'play1-3')" style="position: absolute; top: 11.4%;  left:57.8%;">
+                <button class="center-items " type="button" onClick="PlayAndShow('audio1-3', 'text1-3', 'play1-3')" style="position: absolute; top: 28.4vw; left:27.5vw;">
                     <img id="play1-3" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
                 </button>
 
                 <div class="items hidden-text clickable" id="text1-3" onClick="this.style.display='none'">
-                    <h3>My favorite event this year was our sports day. It was in September. We practiced for a relay. I had a good time. I was nervous and excited. Our class won first place! It was so great. I enjoyed the day very much.
+                    <h3>Vietnam
                     </h3>
                 </div>
 
@@ -130,12 +130,12 @@
                 </audio>
 
 
-                <button class="center-items " type="button" onClick="PlayAndShow('audio1-4', 'text1-4', 'play1-4')" style="position: absolute; top: 12%;  left:76.8%;">
+                <button class="center-items " type="button" onClick="PlayAndShow('audio1-4', 'text1-4', 'play1-4')" style="position: absolute; top: 41.9vw; left:22.3vw;">
                     <img id="play1-4" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
                 </button>
 
                 <div class="items hidden-text clickable" id="text1-4" onClick="this.style.display='none'">
-                    <h3>My favorite event this year was our school trip. It was in August. We went to Lake Haruna. We had a walk rally and a cutter boat experience. There were quizzes everywhere on the walk rally. And the cutter boat experience was difficult. But it was very exciting! The school trip was tiring but fun. We enjoyed our school trip!
+                    <h3>Australia
                     </h3>
                 </div>
 
@@ -145,12 +145,12 @@
 
 
 
-                <button class="center-items " type="button" onClick="PlayAndShow('audio1-5', 'text1-5', 'play1-5')" style="position: absolute; top: 55.3%; left:20%;">
+                <button class="center-items " type="button" onClick="PlayAndShow('audio1-5', 'text1-5', 'play1-5')" style="position: absolute; top: .2vw; left:59vw;">
                     <img id="play1-5" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
                 </button>
 
                 <div class="items hidden-text clickable" id="text1-5" onClick="this.style.display='none'">
-                    <h3>We started light art on January 20th. Light art is using light to create drawings and letters. We did the light art for the 3rd grade as a present for all the good things they helped us and taught us to do. The colors of the changing letters were very beautiful.
+                    <h3>France
                     </h3>
                 </div>
 
@@ -159,12 +159,12 @@
                 </audio>
 
 
-                <button class="center-items " type="button" onClick="PlayAndShow('audio1-6', 'text1-6', 'play1-6')" style="position: absolute; top: 53.5%;  left:36.5%;">
+                <button class="center-items " type="button" onClick="PlayAndShow('audio1-6', 'text1-6', 'play1-6')" style="position: absolute; top: 14.6vw;  left:53.5vw;">
                     <img id="play1-6" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
                 </button>
 
                 <div class="items hidden-text clickable" id="text1-6" onClick="this.style.display='none'">
-                    <h3>My favorite event this year was our field trip. In December, we went around Isesaki's historical places and we saw parts of Japanese culture. At first, we went to the Aikawa Museum and next we went to Isesaki Shrine. It was so interesting. I enjoyed the day very much.
+                    <h3>France
                     </h3>
                 </div>
 
@@ -174,12 +174,12 @@
 
 
 
-                <button class="center-items " type="button" onClick="PlayAndShow('audio1-7', 'text1-7', 'play1-7')" style="position: absolute; top: 52.4%;  left:59.1%;">
+                <button class="center-items " type="button" onClick="PlayAndShow('audio1-7', 'text1-7', 'play1-7')" style="position: absolute; top: 27.7vw;  left:56.8vw;">
                     <img id="play1-7" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
                 </button>
 
                 <div class="items hidden-text clickable" id="text1-7" onClick="this.style.display='none'">
-                    <h3>My favorite event this year was our light art. The first graders gathered in the gym and worked together to make pictures. I really wanted to do it in front of the third grade. When the pictures were over, I felt a great sense of accomplishment.
+                    <h3>Sweden
                     </h3>
                 </div>
 
@@ -188,12 +188,12 @@
                 </audio>
 
 
-                <button class="center-items " type="button" onClick="PlayAndShow('audio1-8', 'text1-8', 'play1-8')" style="position: absolute; top: 54.9%;  left:76.7%;">
+                <button class="center-items " type="button" onClick="PlayAndShow('audio1-8', 'text1-8', 'play1-8')" style="position: absolute; top: 42.7vw;  left:53.5vw;">
                     <img id="play1-8" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
                 </button>
 
                 <div class="items hidden-text clickable" id="text1-8" onClick="this.style.display='none'">
-                    <h3 style="font-size: 2.3vw;">My favorite things this year were our classes. Social studies was really interesting because the teacher gave interesting classes. Japanese was fun because I read stories in depth. I can write many sentences in English. Thanks to the teachers, I was able to get good marks on tests. I am grateful to the teachers who taught me the lessons.
+                    <h3>Korea
                     </h3>
                 </div>
 
