--- a/1.html
+++ b/1.html
@@ -84,8 +84,18 @@
                 </button>
     
                 <div class="items hidden-text clickable" id="text1-0" onClick="this.style.display='none'">
-                    <h2>Famous Things around the World<br><br>
-                    What are some famous things from other countries? Students at Toyouke Elementary School made these presentations about countries they want to visit! Read about them and learn about cool things all around the world!</h2>
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <span class="close">&times;</span>
+                        </div>
+                        <div class="modal-body">
+                            <h2>Famous Things around the World<br><br>
+                                What are some famous things from other countries? Students at Toyouke Elementary School made these presentations about countries they want to visit! Read about them and learn about cool things all around the world!</h2>
+                        </div>
+                        <div class="modal-footer">
+                        </div>
+                    </div>
                 </div>
     
                 <audio id="audio1-0">
@@ -98,12 +108,22 @@
                 </button>
 
                 <div class="items hidden-text clickable" id="text1-1" onClick="this.style.display='none'">
-                    <h3>France<br><br>
-                        France is a nice country.<br>
-                        You can see the Eiffel Tower.<br>
-                        You can eat canelé.<br>
-                        It's delicious.
-                    </h3>
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <span class="close">&times;</span>
+                        </div>
+                        <div class="modal-body">
+                            <h3>France<br><br>
+                                France is a nice country.<br>
+                                You can see the Eiffel Tower.<br>
+                                You can eat canelé.<br>
+                                It's delicious.
+                            </h3>
+                        </div>
+                        <div class="modal-footer">
+                        </div>
+                    </div>
                 </div>
 
                 <audio id="audio1-1" class="playondemand">
@@ -116,14 +136,24 @@
                 </button>
 
                 <div class="items hidden-text clickable" id="text1-2" onClick="this.style.display='none'">
-                    <h3>Switzerland<br><br>
-                        Switzerland is a nice country.<br>
-                        You can eat cheese fondue.<br>
-                        It's delicious.<br>
-                        You can see the Matterhorn.<br>
-                        It's very powerful.<br>
-                        I want to go to Switzerland.
-                    </h3>
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <span class="close">&times;</span>
+                        </div>
+                        <div class="modal-body">
+                            <h3>Switzerland<br><br>
+                                Switzerland is a nice country.<br>
+                                You can eat cheese fondue.<br>
+                                It's delicious.<br>
+                                You can see the Matterhorn.<br>
+                                It's very powerful.<br>
+                                I want to go to Switzerland.
+                            </h3>
+                        </div>
+                        <div class="modal-footer">
+                        </div>
+                    </div>
                 </div>
 
                 <audio id="audio1-2">
@@ -136,12 +166,22 @@
                 </button>
 
                 <div class="items hidden-text clickable" id="text1-3" onClick="this.style.display='none'">
-                    <h3>Vietnam<br><br>
-                        Vietnam is a nice country.<br>
-                        You can see the Ba Na Hills.<br>
-                        You can eat banh mi.<br>
-                        It's sweet and sour.
-                    </h3>
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <span class="close">&times;</span>
+                        </div>
+                        <div class="modal-body">
+                            <h3>Vietnam<br><br>
+                                Vietnam is a nice country.<br>
+                                You can see the Ba Na Hills.<br>
+                                You can eat banh mi.<br>
+                                It's sweet and sour.
+                            </h3>
+                        </div>
+                        <div class="modal-footer">
+                        </div>
+                    </div>
                 </div>
 
                 <audio id="audio1-3">
@@ -154,15 +194,25 @@
                 </button>
 
                 <div class="items hidden-text clickable" id="text1-4" onClick="this.style.display='none'">
-                    <h3>Australia<br><br>
-                        Australia is a nice country.<br>
-                        You can eat fish and chips.<br>
-                        It's delicious.<br>
-                        You can see a koala.<br>
-                        It's very cute.<br>
-                        I want to go to Australia.<br>
-                        Thank you.
-                    </h3>
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <span class="close">&times;</span>
+                        </div>
+                        <div class="modal-body">
+                            <h3>Australia<br><br>
+                                Australia is a nice country.<br>
+                                You can eat fish and chips.<br>
+                                It's delicious.<br>
+                                You can see a koala.<br>
+                                It's very cute.<br>
+                                I want to go to Australia.<br>
+                                Thank you.
+                            </h3>
+                        </div>
+                        <div class="modal-footer">
+                        </div>
+                    </div>
                 </div>
 
                 <audio id="audio1-4">
@@ -176,12 +226,22 @@
                 </button>
 
                 <div class="items hidden-text clickable" id="text1-5" onClick="this.style.display='none'">
-                    <h3>France<br><br>
-                        France is a nice country.<br>
-                        You can see the Rugby World Cup.<br>
-                        You can eat macaroons.<br>
-                        It's delicious.
-                    </h3>
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <span class="close">&times;</span>
+                        </div>
+                        <div class="modal-body">
+                            <h3>France<br><br>
+                                France is a nice country.<br>
+                                You can see the Rugby World Cup.<br>
+                                You can eat macaroons.<br>
+                                It's delicious.
+                            </h3>
+                        </div>
+                        <div class="modal-footer">
+                        </div>
+                    </div>
                 </div>
 
                 <audio id="audio1-5">
@@ -194,13 +254,23 @@
                 </button>
 
                 <div class="items hidden-text clickable" id="text1-6" onClick="this.style.display='none'">
-                    <h3>France<br><br>
-                        France is a nice country.<br>
-                        You can see the Eiffel Tower.<br>
-                        You can eat dessert.<br>
-                        It's delicious.<br>
-                        You can see the Arc de Triomphe.
-                    </h3>
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <span class="close">&times;</span>
+                        </div>
+                        <div class="modal-body">
+                            <h3>France<br><br>
+                                France is a nice country.<br>
+                                You can see the Eiffel Tower.<br>
+                                You can eat dessert.<br>
+                                It's delicious.<br>
+                                You can see the Arc de Triomphe.
+                            </h3>
+                        </div>
+                        <div class="modal-footer">
+                        </div>
+                    </div>
                 </div>
 
                 <audio id="audio1-6">
@@ -214,13 +284,23 @@
                 </button>
 
                 <div class="items hidden-text clickable" id="text1-7" onClick="this.style.display='none'">
-                    <h3>Sweden<br><br>
-                        Sweden is a nice country.<br>
-                        You can see the Stockholm Palace.<br>
-                        It's delicious.<br>
-                        And Scania is a big corporation.<br>
-                        Trucks and buses from Scania are nice and beautiful.
-                    </h3>
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <span class="close">&times;</span>
+                        </div>
+                        <div class="modal-body">
+                            <h3>Sweden<br><br>
+                                Sweden is a nice country.<br>
+                                You can see the Stockholm Palace.<br>
+                                It's delicious.<br>
+                                And Scania is a big corporation.<br>
+                                Trucks and buses from Scania are nice and beautiful.
+                            </h3>
+                        </div>
+                        <div class="modal-footer">
+                        </div>
+                    </div>
                 </div>
 
                 <audio id="audio1-7">
@@ -233,14 +313,24 @@
                 </button>
 
                 <div class="items hidden-text clickable" id="text1-8" onClick="this.style.display='none'">
-                    <h3>Korea<br><br>
-                        Korea is a nice country.<br>
-                        You can see Seoul Tower.<br>
-                        It's very big and beautiful.<br>
-                        you can eat gimbap.<br>
-                        It's delicious.<br>
-                        I want to go to Korea.
-                    </h3>
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <span class="close">&times;</span>
+                        </div>
+                        <div class="modal-body">
+                            <h3>Korea<br><br>
+                                Korea is a nice country.<br>
+                                You can see Seoul Tower.<br>
+                                It's very big and beautiful.<br>
+                                you can eat gimbap.<br>
+                                It's delicious.<br>
+                                I want to go to Korea.
+                            </h3>
+                        </div>
+                        <div class="modal-footer">
+                        </div>
+                    </div>
                 </div>
 
                 <audio id="audio1-8">
