--- a/1.html
+++ b/1.html
@@ -323,7 +323,7 @@
                                 Korea is a nice country.<br>
                                 You can see Seoul Tower.<br>
                                 It's very big and beautiful.<br>
-                                you can eat gimbap.<br>
+                                You can eat gimbap.<br>
                                 It's delicious.<br>
                                 I want to go to Korea.
                             </h3>
