--- a/5.html
+++ b/5.html
@@ -92,7 +92,8 @@
                             <span class="close">&times;</span>
                         </div>
                         <div class="modal-body">
-                            <h2>Read about this special holiday in Mexico!<br><br>
+                            <h2>Unique Things of the World<br><br>
+                                Read about this special holiday in Mexico!<br><br>
                                 What is it called?<br>
                                 What happens on this day?<br>
                                 Is it a scary holiday?
@@ -107,7 +108,7 @@
                 <!-- Audio for Intro Text -->
 
                 <audio id="audio1-0" class="playondemand">
-                    <source src="./audio/audio3-1.mp3" type="audio/mp3">
+                    <source src="./audio/audio3-0.mp3" type="audio/mp3">
                 </audio>
                     
                 <!-- Buttons for Main Text -->
@@ -194,7 +195,7 @@
 
                 <!-- QR to launch website -->
 
-                <a href="https://in.isesaki.in/3ZGU3vh" class="button" style="position: absolute; top: 20.05vw; left: 79.25vw;">
+                <a href="https://in.isesaki.in/3ZGU3vh" target="_blank" class="button" style="position: absolute; top: 20.05vw; left: 79.25vw;">
                     <img id="play1-5" class="qr-button-image clickable" src="nav-images/qr-day-of-the-dead.png" style="border:2px solid orange">
                 </a>
 
