--- a/3.html
+++ b/3.html
@@ -95,7 +95,8 @@
                             <span class="close">&times;</span>
                         </div>
                         <div class="modal-body">
-                            <h2>Read about Agnes's trip to Tokyo Big Sight and tell us about your own favorite anime or games!
+                            <h2>Fun Things We Enjoy<br><br>
+                                Read about Agnes's trip to Tokyo Big Sight and tell us about your own favorite anime or games!
                             </h2>
                         </div>
                         <div class="modal-footer">
@@ -175,7 +176,7 @@
                         </div>
                         <div class="modal-body">
                             <h3>
-                                &emsp;How about you? We would like to hear from you! Vote for your favorite anime or manga with the QR code on the next page!</h3>
+                                &emsp;How about you? We would like to hear from you! Vote for your favorite anime and games with the QR code on the next page!</h3>
                         </div>
                         <div class="modal-footer">
                         </div>
@@ -254,9 +255,9 @@
                 </audio>
                   
 
-                <!-- Buttons and Audio for Voting -->
+                <!-- Buttons and Audio for Voting (unnecessary as of now) -->
 
-                <button class="center-items " type="button" onClick="PlayAndShow('audio1-3', 'text1-3', 'play1-3')" style="position: absolute; top: 33.2vw; left: 57.2vw;">
+                <!-- <button class="center-items " type="button" onClick="PlayAndShow('audio1-3', 'text1-3', 'play1-3')" style="position: absolute; top: 33.2vw; left: 57.2vw;">
                     <img id="play1-3" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
                 </button>
 
@@ -278,11 +279,11 @@
 
                 <audio id="audio1-5" class="playondemand">
                     <source src="./audio/audio2-5.mp3" type="audio/mp3">
-                </audio>
+                </audio> -->
 
                 <!-- QR to launch website -->
 
-                <a href="https://in.isesaki.in/3tfVFQE" class="button" style="position: absolute; top: 38.9vw; left: 76.4vw;">
+                <a href="https://in.isesaki.in/3tfVFQE" target="_blank" class="button" style="position: absolute; top: 38.9vw; left: 76.4vw;">
                     <img id="play1-5" class="qr-button-image clickable" src="nav-images/qr-anime-vote.png" style="border:2px solid navy">
                 </a>
 
