--- a/1.html
+++ b/1.html
@@ -5,7 +5,7 @@
 
     <link href="style.css" rel="stylesheet">
     <meta name="viewport" content="width=1920, height=1080, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Impress Magazine - Summer, 2023</title>
+    <title>Impress Magazine - Fall, 2023</title>
     <link rel="icon" type="image/x-icon" href="nav-images/logo.png">
     <link id="favicon" rel="shortcut icon" href="nav-images/logo.png">
     <script type="text/javascript" src="scripts.js"></script>
