Updated music credits

--- a/about.html
+++ b/about.html
@@ -94,6 +94,9 @@
                     <li>Computer Wav from <a href="https://pixabay.com/sound-effects/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=14702" class="credit-text">Pixabay</a></li>
                     <li>Play Audio by <a href="https://pixabay.com/users/raphaelsilva-4702998/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2935460" class="credit-text">Raphael Silva</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2935460" class="credit-text">Pixabay</a></li>
                     <li>Stop Audio by <a href="https://pixabay.com/users/raphaelsilva-4702998/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2935470" class="credit-text">Raphael Silva</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2935470" class="credit-text">Pixabay</a></li>
+                    <li>Sway Music by <a href="https://pixabay.com/users/keyframe_audio-32058364/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=134991" class="credit-text">Keyframe Audio</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=134991" class="credit-text">Pixabay</a></li>
+                    <li>Music by <a href="https://pixabay.com/users/p4lash-24520502/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=144238" class="credit-text">Palash Sunvaiya</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=144238" class="credit-text">Pixabay</a></li>
+                        
                 </ul>
 
                 <h2>Thank you for reading <i>Impress!</i></h2>
