Updated logo and fixed a missing line

--- a/1.html
+++ b/1.html
@@ -293,6 +293,7 @@
                             <h3>Sweden<br><br>
                                 Sweden is a nice country.<br>
                                 You can see the Stockholm Palace.<br>
+                                You can eat pancakes.<br>
                                 It's delicious.<br>
                                 And Scania is a big corporation.<br>
                                 Trucks and buses from Scania are nice and beautiful.
