Updated QR, logo, and pages

--- a/3.html
+++ b/3.html
@@ -284,7 +284,7 @@
                 <!-- QR to launch website -->
 
                 <a href="https://in.isesaki.in/3tfVFQE" target="_blank" class="button" style="position: absolute; top: 38.9vw; left: 76.4vw;">
-                    <img id="play1-5" class="qr-button-image clickable" src="nav-images/qr-anime-vote.png" style="border:2px solid navy">
+                    <img id="play1-5" class="qr-button-image clickable" src="QR/qr-anime-vote.png" style="border:2px solid navy">
                 </a>
 
 
