--- a/5.html
+++ b/5.html
@@ -196,7 +196,7 @@
                 <!-- QR to launch website -->
 
                 <a href="https://in.isesaki.in/3ZGU3vh" target="_blank" class="button" style="position: absolute; top: 20.05vw; left: 79.25vw;">
-                    <img id="play1-5" class="qr-button-image clickable" src="nav-images/qr-day-of-the-dead.png" style="border:2px solid orange">
+                    <img id="play1-5" class="qr-button-image clickable" src="QR/qr-day-of-the-dead.png" style="border:2px solid orange">
                 </a>
 
             </div>
