--- a/cover.html
+++ b/cover.html
@@ -106,7 +106,7 @@
                     <source src="./audio/audio7-0.mp3" type="audio/mp3">
                 </audio>
 
-                <a href="https://in.isesaki.in/impress-fall-2023" target="_blank" class="button" style="position: absolute; top: 42.9%; left: 62.5%;">
+                <a href="https://in.isesaki.in/impress-fall-2023" target="_blank" class="button" style="position: absolute; top: 23vw; left: 62vw;">
                     <img id="play1-5" class="qr-button-image-large clickable" src="QR/qr-in.isesaki.in_impress-fall-2023.png" style="border:2px solid rgb(0, 0, 0)">
                 </a>
             </div>
