Some updates to test things

--- a/cover.html
+++ b/cover.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="scripts.js"></script>
 </head>
 <body>
+    <div id="viewport">
     <div id="container">
         <!-- Your website content goes here -->
 
@@ -119,7 +120,7 @@
 
 
 
-
+</div>
 </body>
 </html>
 
