--- a/3.html
+++ b/3.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="scripts.js"></script>
 </head>
 <body>
+    <div id="viewport">
     <div id="container">
         <!-- Left Menu -->
 
@@ -298,6 +299,7 @@
 
 
 
+</div>
 </body>
 </html>
 
