--- a/5.html
+++ b/5.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="scripts.js"></script>
 </head>
 <body>
+    <div id="viewport">
     <div id="container">
         <!-- Your website content goes here -->
 
@@ -210,6 +211,7 @@
 
 
 
+</div>
 </body>
 </html>
 
