--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="scripts.js"></script>
 </head>
 <body>
+    <div id="viewport">
     <div id="container">
         <!-- Your website content goes here -->
 
@@ -123,7 +124,7 @@
 
 
 
-
+</div>
 </body>
 </html>
 
