moved buttons around a bit

--- a/1.html
+++ b/1.html
@@ -80,6 +80,8 @@
         <div class="item content-center" style="background-image: url('Web/page034.jpg'); background-size: contain; background-position: center; background-attachment: local; background-repeat: no-repeat; background-color: #000000;">
             <div class="center-items">
 
+                <!-- Intro Text -->
+
                 <button class="center-items " type="button" onClick="PlayAndShow('audio1-0', 'text1-0', 'play1-0')" style="position: absolute; top: 20vw; left:89vw;">
                     <img id="play1-0" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
                 </button>
@@ -104,9 +106,42 @@
                 </audio>
 
 
+                <!-- Buttons for Main Text -->
+
                 <button class="center-items " type="button" onClick="PlayAndShow('audio1-1', 'text1-1', 'play1-1')" style="position: absolute; top: 5vw; left:28vw;">
                     <img id="play1-1" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
                 </button>
+
+                <button class="center-items " type="button" onClick="PlayAndShow('audio1-2', 'text1-2', 'play1-2')" style="position: absolute; top: 18.4vw; left:25vw;">
+                    <img id="play1-2" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
+                </button>
+
+                <button class="center-items " type="button" onClick="PlayAndShow('audio1-3', 'text1-3', 'play1-3')" style="position: absolute; top: 31.4vw; left:27.5vw;">
+                    <img id="play1-3" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
+                </button>
+
+                <button class="center-items " type="button" onClick="PlayAndShow('audio1-4', 'text1-4', 'play1-4')" style="position: absolute; top: 44.9vw; left:22.3vw;">
+                    <img id="play1-4" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
+                </button>
+
+                <button class="center-items " type="button" onClick="PlayAndShow('audio1-5', 'text1-5', 'play1-5')" style="position: absolute; top: 4.2vw; left:58vw;">
+                    <img id="play1-5" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
+                </button>
+
+                <button class="center-items " type="button" onClick="PlayAndShow('audio1-6', 'text1-6', 'play1-6')" style="position: absolute; top: 18.6vw;  left:52.5vw;">
+                    <img id="play1-6" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
+                </button>
+
+                <button class="center-items " type="button" onClick="PlayAndShow('audio1-7', 'text1-7', 'play1-7')" style="position: absolute; top: 31.7vw;  left:55.8vw;">
+                    <img id="play1-7" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
+                </button>
+
+                <button class="center-items " type="button" onClick="PlayAndShow('audio1-8', 'text1-8', 'play1-8')" style="position: absolute; top: 45.7vw;  left:52.5vw;">
+                    <img id="play1-8" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
+                </button>
+
+
+                <!-- Text for Main Text -->
 
                 <div class="items hidden-text clickable" id="text1-1" onClick="this.style.display='none'">
                     <!-- Modal content -->
@@ -126,15 +161,6 @@
                         </div>
                     </div>
                 </div>
-
-                <audio id="audio1-1" class="playondemand">
-                  <source src="./audio/audio1-1.mp3" type="audio/mp3">
-                </audio>
-
-
-                <button class="center-items " type="button" onClick="PlayAndShow('audio1-2', 'text1-2', 'play1-2')" style="position: absolute; top: 18.4vw; left:25vw;">
-                    <img id="play1-2" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
-                </button>
 
                 <div class="items hidden-text clickable" id="text1-2" onClick="this.style.display='none'">
                     <!-- Modal content -->
@@ -157,15 +183,6 @@
                     </div>
                 </div>
 
-                <audio id="audio1-2">
-                  <source src="./audio/audio1-2.mp3" type="audio/mp3">
-                </audio>
-
-
-                <button class="center-items " type="button" onClick="PlayAndShow('audio1-3', 'text1-3', 'play1-3')" style="position: absolute; top: 31.4vw; left:27.5vw;">
-                    <img id="play1-3" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
-                </button>
-
                 <div class="items hidden-text clickable" id="text1-3" onClick="this.style.display='none'">
                     <!-- Modal content -->
                     <div class="modal-content">
@@ -184,15 +201,6 @@
                         </div>
                     </div>
                 </div>
-
-                <audio id="audio1-3">
-                  <source src="./audio/audio1-3.mp3" type="audio/mp3">
-                </audio>
-
-
-                <button class="center-items " type="button" onClick="PlayAndShow('audio1-4', 'text1-4', 'play1-4')" style="position: absolute; top: 44.9vw; left:22.3vw;">
-                    <img id="play1-4" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
-                </button>
 
                 <div class="items hidden-text clickable" id="text1-4" onClick="this.style.display='none'">
                     <!-- Modal content -->
@@ -216,16 +224,6 @@
                     </div>
                 </div>
 
-                <audio id="audio1-4">
-                  <source src="audio/audio1-4.mp3" type="audio/mp3">
-                </audio>
-
-
-
-                <button class="center-items " type="button" onClick="PlayAndShow('audio1-5', 'text1-5', 'play1-5')" style="position: absolute; top: 4.2vw; left:57vw;">
-                    <img id="play1-5" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
-                </button>
-
                 <div class="items hidden-text clickable" id="text1-5" onClick="this.style.display='none'">
                     <!-- Modal content -->
                     <div class="modal-content">
@@ -244,15 +242,6 @@
                         </div>
                     </div>
                 </div>
-
-                <audio id="audio1-5">
-                    <source src="audio/audio1-5.mp3" type="audio/mp3">
-                </audio>
-
-
-                <button class="center-items " type="button" onClick="PlayAndShow('audio1-6', 'text1-6', 'play1-6')" style="position: absolute; top: 18.6vw;  left:51.5vw;">
-                    <img id="play1-6" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
-                </button>
 
                 <div class="items hidden-text clickable" id="text1-6" onClick="this.style.display='none'">
                     <!-- Modal content -->
@@ -273,16 +262,6 @@
                         </div>
                     </div>
                 </div>
-
-                <audio id="audio1-6">
-                    <source src="audio/audio1-6.mp3" type="audio/mp3">
-                </audio>
-
-
-
-                <button class="center-items " type="button" onClick="PlayAndShow('audio1-7', 'text1-7', 'play1-7')" style="position: absolute; top: 31.7vw;  left:54.8vw;">
-                    <img id="play1-7" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
-                </button>
 
                 <div class="items hidden-text clickable" id="text1-7" onClick="this.style.display='none'">
                     <!-- Modal content -->
@@ -305,15 +284,6 @@
                     </div>
                 </div>
 
-                <audio id="audio1-7">
-                  <source src="./audio/audio1-7.mp3" type="audio/mp3">
-                </audio>
-
-
-                <button class="center-items " type="button" onClick="PlayAndShow('audio1-8', 'text1-8', 'play1-8')" style="position: absolute; top: 45.7vw;  left:51.5vw;">
-                    <img id="play1-8" class="audio-button-image clickable" src="nav-images/play-g79150a13d_1280.png">
-                </button>
-
                 <div class="items hidden-text clickable" id="text1-8" onClick="this.style.display='none'">
                     <!-- Modal content -->
                     <div class="modal-content">
@@ -335,10 +305,39 @@
                     </div>
                 </div>
 
+                <!-- Audio for Main Text -->
+
+                <audio id="audio1-1" class="playondemand">
+                  <source src="./audio/audio1-1.mp3" type="audio/mp3">
+                </audio>
+
+                <audio id="audio1-2">
+                  <source src="./audio/audio1-2.mp3" type="audio/mp3">
+                </audio>
+
+                <audio id="audio1-3">
+                  <source src="./audio/audio1-3.mp3" type="audio/mp3">
+                </audio>
+
+                <audio id="audio1-4">
+                  <source src="audio/audio1-4.mp3" type="audio/mp3">
+                </audio>
+
+                <audio id="audio1-5">
+                    <source src="audio/audio1-5.mp3" type="audio/mp3">
+                </audio>
+
+                <audio id="audio1-6">
+                    <source src="audio/audio1-6.mp3" type="audio/mp3">
+                </audio>
+
+                <audio id="audio1-7">
+                  <source src="./audio/audio1-7.mp3" type="audio/mp3">
+                </audio>
+
                 <audio id="audio1-8">
                   <source src="./audio/audio1-8.mp3" type="audio/mp3">
                 </audio>
-
 
 
             </div>
