fixed a dangling arrow bracket

--- a/5.html
+++ b/5.html
@@ -129,7 +129,7 @@
                             &emsp;On this special day, the souls of dead people come back and visit the living world. It’s a holiday that comes from 3,000 years ago, from the Aztec people of Mexico.<br><br>
                             &emsp;These days, people put out gifts of food and decorate their homes to welcome these souls. You can often see candles, marigold flowers, fruit, and skeletons on this day. You can also enjoy watching parades while eating delicious skull candy. Would you like to try some?<br><br>
                             &emsp;It sounds scary, and the skeletons look scary, but it’s not a sad or scary holiday. It is a happy day to remember the people who we love who have died.<br><br>
-                            Dying and death are pretty scary things. The Day of the Dead helps us to remember that they’re not so scary. Death is just another part of life.</p>>
+                            Dying and death are pretty scary things. The Day of the Dead helps us to remember that they’re not so scary. Death is just another part of life.</p>
                         </div>
                         <div class="modal-footer">
                         </div>
